--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -100,6 +100,16 @@ h3 {
           transform: translate(-50%, -50%);
 }
 
+.span-1-of-4 {
+  background: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  height: 350px;
+  cursor: pointer;
+}
+.img-gallery {
+  z-index: 9999;
+}
+
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -184,7 +194,7 @@ h3 {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.97);
   box-shadow: 0 2px 2px #efefef;
-  z-index: 9999;
+  z-index: 999;
 }
 
 .sticky .main-nav li a {
